unpackaged/main/default/objects/Compteur__c/Compteur__c.object-meta.xml
<CustomObject>
    <label>Compteur</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Numéro de Compteur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compteurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>