unpackaged/main/default/objects/Compteur__c/fields/Date_Effet__c.field-meta.xml
<CustomField>
    <fullName>Date_Effet__c</fullName>
    <label>Date d’effet</label>
    <type>Date</type>
</CustomField>