unpackaged/main/default/objects/Compteur__c/fields/Km_Compteur__c.field-meta.xml
<CustomField>
    <fullName>Km_Compteur__c</fullName>
    <label>Km Compteur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>