unpackaged/main/default/objects/Compteur__c/fields/Mis_Ajour_par__c.field-meta.xml
<CustomField>
    <fullName>Mis_Ajour_par__c</fullName>
    <label>Mis à jour par</label>
    <length>255</length>
    <type>Text</type>
</CustomField>