unpackaged/main/default/objects/Compteur__c/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <label>Parc</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Compteurs</relationshipLabel>
    <relationshipName>Compteurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>