unpackaged/main/default/objects/Compteur__c/fields/Type_Miseajour__c.field-meta.xml
<CustomField>
    <fullName>Type_Miseajour__c</fullName>
    <label>Type de mise à jour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mouvement</fullName>
            </value>
            <value>
                <fullName>Fin de mois</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Géolocalisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>